# duckai

./: Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: client.rs  config.rs  error.rs  hash.rs  main.rs  model.rs  process.rs  route.rs  serve.rs
src/serve/: client.rs  mod.rs  model.rs  route.rs  signal.rs
