[package]
name = "duckai"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
argh = "0.1"
url = { version = "2", features = ["serde"] }
typed-builder = "0.20"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# client
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }

# log
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# yaml
serde_yaml = "0.9"

# eventsource stream
eventsource-stream = "0.2.3"
async-stream = "0.3.6"

# axum
axum = { version = "0.8.1", features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
hyper-util = { version = "0.1.10", features = ["http2", "tokio"] }
axum-extra = { version =  "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", default-features = false, features = ["cors"] }
tower = { version = "0.5.2", default-features = false }

base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1"